--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ border: 1px solid gray;
 
 }
 .carrello{
-    box-shadow: 0px 0px 10px white!important;
+    box-shadow: 0px 0px 15px white;
 }
 .dettaglio img{
     width: 25px;
